--- a/dashboard/app/src/components/single-pages/Product.css
+++ b/dashboard/app/src/components/single-pages/Product.css
@@ -2,6 +2,10 @@
     margin: 44px 24px 10px;
 }
 
+.product h3 span {
+    font-weight: 200;
+}
+
 .product .image-wrapper {
     width: 280px;
     height: 280px;
@@ -13,4 +17,9 @@
 .product img {
     width: 100%;
     height: 100%;
+}
+
+.product .technical-details .wrapper {
+    padding: 1px;
+    box-shadow: none !important;
 }
