--- a/dashboard/app/src/components/header/Header.css
+++ b/dashboard/app/src/components/header/Header.css
@@ -9,6 +9,7 @@ header {
     flex-direction: column;
     align-items: left;
     justify-content: center;
+    z-index: 999999;
 }
 
 header .links {
