--- a/dashboard/app/src/components/single-pages/tracking/Tracking.css
+++ b/dashboard/app/src/components/single-pages/tracking/Tracking.css
@@ -2,3 +2,7 @@
     height: 400px;  /* The height is 400 pixels */
     width: 100%;  /* The width is the width of the web page */
 }
+
+.tracking-steps {
+    text-align: left;
+}
