--- a/dashboard/app/src/components/header/Header.css
+++ b/dashboard/app/src/components/header/Header.css
@@ -4,7 +4,7 @@ header {
     box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.06);
     position: fixed;
     top: 0;
-    background-color: '#FFFFFF';
+    background: #FFFFFF;
     display: flex;
     flex-direction: column;
     align-items: left;
