Added new color.

--- a/dashboard/app/src/components/header/Header.css
+++ b/dashboard/app/src/components/header/Header.css
@@ -32,7 +32,7 @@ header .links a {
 
 header .links a:hover,
 header .links .selected {
-  color: #0076ff !important;
+  color: #99CC33 !important;
 }
 
 header .links .selected {
