--- a/dashboard/app/src/App.css
+++ b/dashboard/app/src/App.css
@@ -13,21 +13,28 @@
 
 .loader:empty {
   position: absolute;
-  top: calc(50% - 4em);
-  left: calc(50% - 4em);
-  width: 6em;
-  height: 6em;
-  border: 1.1em solid rgba(0, 0, 0, 0.2);
-  border-left: 1.1em solid #000000;
-  border-radius: 50%;
-  animation: load8 1.1s infinite linear;
+  top: calc(50% - 12em);
+  left: calc(50% - 20em);
+  width: 40em;
+  height: 40em;
+  background-image: url("./assets/svg/we_carry.svg");
+  background-repeat: no-repeat;
+  animation: load8 2.5s ease-in-out;
+  transition-property: transform;
+  opacity: 0;
 }
 
 @keyframes load8 {
   0% {
-    transform: rotate(0deg);
+    opacity: 1;
+  }
+  80% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 0.7;
   }
   100% {
-    transform: rotate(360deg);
+    opacity: 0;
   }
 }
