--- a/dashboard/app/src/components/single-pages/product/Product.css
+++ b/dashboard/app/src/components/single-pages/product/Product.css
@@ -9,9 +9,10 @@
 .product .image-wrapper {
     width: 280px;
     height: 280px;
-    background: #EBEBEB;
+    background: #99CC33;
     border-radius: 50%;
     margin: 0 auto;
+    opacity: 0.7;
 }
 
 .product img {
