--- a/dashboard/app/src/components/table/Table.css
+++ b/dashboard/app/src/components/table/Table.css
@@ -29,6 +29,8 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    position: relative;
+    left: 24px;
 }
 .tracking-link-wrapper:hover {
     background-color: #FFFFFF;
@@ -36,4 +38,8 @@
 
 td a {
     color: #99CC33 !important;
+}
+
+.tracking-head {
+    text-align: left !important;
 }
