--- a/dashboard/app/src/components/header/Header.css
+++ b/dashboard/app/src/components/header/Header.css
@@ -6,7 +6,7 @@ header {
     top: 0;
     background: #FFFFFF;
     display: flex;
-    flex-direction: column;
+    flex-direction: inherit;
     align-items: left;
     justify-content: center;
     z-index: 999999;
@@ -15,7 +15,7 @@ header {
 header .links {
     width: 100%;
     margin: 0 auto;
-    padding: 1.5rem;
+    padding-left: 1.5rem;
     text-align: left;
     vertical-align: middle;
 }
@@ -47,4 +47,8 @@ header img.app-logo {
     height: auto;
     position: relative;
     top: 23px;
+}
+
+.flex-div {
+    flex: 1 1 auto;
 }
