--- a/dashboard/app/src/components/header/user-module/UserModule.css
+++ b/dashboard/app/src/components/header/user-module/UserModule.css
@@ -15,8 +15,13 @@
     letter-spacing: 0.1rem;
     margin-right: 15px;
     font-family: 'Roboto', sans-serif;
-    width: 240px;
+    width: 310px;
+    min-width: 240px;
     margin: 26px 0;
+}
+
+.user-module h6 span {
+    font-weight: 400;
 }
 
 .user-module .user-module-icon {
