--- a/dashboard/app/src/components/header/user-module/sub-menu/SubMenu.css
+++ b/dashboard/app/src/components/header/user-module/sub-menu/SubMenu.css
@@ -6,13 +6,46 @@
     height: auto;
     background: #55565B;
     /* border: 1px solid #55565B; */
-    box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.06);
+    box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.3);
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     right: 1.5rem;
     opacity: 0.8;
 }
 
-.sub-menu h4 {
+.sub-menu h4,
+.sub-menu li a {
     color: #FFFFFF;
+}
+
+.sub-menu ul {
+    list-style: none;
+    padding: 0;
+}
+
+.sub-menu li:first-child {
+    border-top: 1px solid #99CC33;
+}
+
+.sub-menu li {
+    height: 35px;
+    border-bottom: 1px solid #99CC33;
+}
+
+.sub-menu li a {
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 14px;
+    position: relative;
+    top: 7px;
+}
+
+.sub-menu li:hover {
+    background: #99CC33;
+    cursor: pointer;
+}
+
+.sub-menu li a:hover {
+    text-decoration: underline;
+    color: #55565B;
 }
