Fixed touch area for mobile menu.

--- a/dashboard/app/src/components/header/user-module/sub-menu/SubMenu.css
+++ b/dashboard/app/src/components/header/user-module/sub-menu/SubMenu.css
@@ -21,23 +21,21 @@
 .sub-menu ul {
     list-style: none;
     padding: 0;
-}
-
-.sub-menu li:first-child {
     border-top: 1px solid #99CC33;
 }
 
-.sub-menu li {
-    height: 65px;
+.sub-menu a li {
+    height: 44px;
     border-bottom: 1px solid #99CC33;
+    border-top: none;
+    padding-top: 24px;
+    color: #FFFFFF;
 }
 
-.sub-menu li a {
+.sub-menu a {
     text-decoration: none;
     font-weight: 400;
     font-size: 14px;
-    position: relative;
-    top: 24px;
 }
 
 .sub-menu li:hover {
