--- a/dashboard/app/src/components/sections/entries/Entries.css
+++ b/dashboard/app/src/components/sections/entries/Entries.css
@@ -1,3 +1,19 @@
-button.entry-button span {
-    text-decoration: none !important;
+.entries a button {
+    color: #FFFFFF !important;
+    background: #55565B !important;
+    box-shadow: none !important;
+}
+
+.entries a {
+    text-decoration: none;
+}
+
+.entries a:hover button {
+  background: #99CC33 !important;
+}
+
+@media screen and (max-width: 1015px) {
+    .entries a button {
+        background: #99CC33 !important;
+    }
 }
