Addeed broser url includes as utils function. Added selected section on mobile menu.

--- a/dashboard/app/src/components/header/user-module/sub-menu/SubMenu.css
+++ b/dashboard/app/src/components/header/user-module/sub-menu/SubMenu.css
@@ -42,6 +42,10 @@
     cursor: inherit;
 }
 
+.sub-menu li.selected {
+    background: #99CC33;
+}
+
 .sub-menu li a:hover {
     text-decoration: underline;
     color: #55565B;
