--- a/dashboard/app/src/App.css
+++ b/dashboard/app/src/App.css
@@ -11,6 +11,20 @@
   top: 64px;
 }
 
+#login-logo {
+  background-image: url("./assets/svg/we_carry.svg");
+  background-repeat: no-repeat;
+  position: relative;
+  margin: 0 auto;
+  width: 12em;
+  height: 6em;
+}
+
+.login-register-button {
+  width: 100%;
+  height: 40px;
+}
+
 .loader:empty {
   position: absolute;
   top: calc(50% - 12em);
