Finish up welcome page

--- a/app/views/welcome.ejs
+++ b/app/views/welcome.ejs
@@ -1,12 +1,12 @@
-<div class="row mt-5">
+<div id="welcome-page" class="row mt-5">
     <div class="col-md-6 m-auto">
         <div class="card card-body text-center">
-        <h1><i class="fab fa-node-js fa-3x"></i></h1>
-        <p>Create an account or login</p>
+        <div class="logo"></div>
+        <p>Ingresa o crea una cuenta si todavía no estas registrado</p>
         <a href="/users/register" class="btn btn-primary btn-block mb-2"
-            >Register</a
+            >Registrarse</a
         >
-        <a href="/users/login" class="btn btn-secondary btn-block">Login</a>
+        <a href="/users/login" class="btn btn-secondary btn-block">Ingresar</a>
         </div>
     </div>
 </div>
