--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css">
-    <title>Node.js and Passport App</title>
+    <link rel="stylesheet" href="/css/app.css">
+    <title>We Carry</title>
 </head>
 <body>
     <div class="container">
