--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -1,20 +1,21 @@
 
-<div class="row mt-5">
+<div id="register-page" class="row mt-5">
     <div class="col-md-6 m-auto">
         <div class="card card-body">
         <h1 class="text-center mb-3">
             <i class="fas fa-user-plus"></i> Register
         </h1>
+        <div class="logo"></div>
         <% include ./partials/messages %>
         <form action="/users/register" method="POST">
             <div class="form-group">
-            <label for="name">Name</label>
+            <label for="name">Nombre</label>
             <input
                 type="name"
                 id="name"
                 name="name"
                 class="form-control"
-                placeholder="Enter Name"
+                placeholder="Ingresa tu nombre completo"
                 value="<%= typeof name != 'undefined' ? name : '' %>"
             />
             </div>
@@ -25,37 +26,37 @@
                 id="email"
                 name="email"
                 class="form-control"
-                placeholder="Enter Email"
+                placeholder="Ingresa tu email"
                 value="<%= typeof email != 'undefined' ? email : '' %>"
             />
             </div>
             <div class="form-group">
-            <label for="password">Password</label>
+            <label for="password">Contraseña</label>
             <input
                 type="password"
                 id="password"
                 name="password"
                 class="form-control"
-                placeholder="Create Password"
+                placeholder="Ingresa una contraseña"
                 value="<%= typeof password != 'undefined' ? password : '' %>"
             />
             </div>
             <div class="form-group">
-            <label for="password2">Confirm Password</label>
+            <label for="password2">Confirmar Contraseña</label>
             <input
                 type="password"
                 id="password2"
                 name="password2"
                 class="form-control"
-                placeholder="Confirm Password"
+                placeholder="Volvé a ingresar tu contraseña"
                 value="<%= typeof password2 != 'undefined' ? password2 : '' %>"
             />
             </div>
             <button type="submit" class="btn btn-primary btn-block">
-            Register
+            Registrarme
             </button>
         </form>
-        <p class="lead mt-4">Have An Account? <a href="/users/login">Login</a></p>
+        <p class="lead mt-4">Ya tenes una cuenta? <a href="/users/login">Login</a></p>
         </div>
     </div>
 </div>
