Worked on header and dashboard layout

--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -10,6 +10,21 @@
     <title>We Carry</title>
 </head>
 <body>
+    <header>
+        <div class="links">
+            <a href="/dashboard">
+                <img src="/images/svg/we_carry.svg" class="app-logo" alt="logo" />
+            </a>
+            <a id="inventory" class="navs" href="/inventory">Inventario</a>
+            <a id="orders" class="navs" href="/orders">Pedidos</a>
+            <a id="entries" class="navs" href="/entries">Solicitudes</a>
+            <a id="stats" class="navs" href="/stats">Estadísticas</a>
+        </div>
+            
+        <div class="user-module">
+            <!-- TODO add icons -->
+        </div>
+    </header>
     <div class="container">
         <%- body %>
     </div>
