--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -60,3 +60,151 @@ ul, ol, li {
 #register-page a:hover {
     color: #99CC33;
 }
+
+/* Header */
+
+header {
+    width: 100%;
+    height: 64px;
+    box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.06);
+    position: fixed;
+    top: 0;
+    background: #FFFFFF;
+    display: none;
+    flex-direction: inherit;
+    align-items: left;
+    justify-content: center;
+    z-index: 999999;
+}
+
+header.show {
+    display: flex;
+}
+
+header .links {
+    width: 100%;
+    margin: 0 auto;
+    padding-left: 1.5rem;
+    text-align: left;
+    vertical-align: middle;
+}
+
+header .links a {
+    text-decoration: none;
+    color: #55565B;
+    font-size: 0.8rem;
+    font-weight: 400;
+    letter-spacing: 0.1rem;
+    margin-right: 15px;
+    font-family: 'Roboto', sans-serif;
+    text-transform: uppercase;
+    position: relative;
+    top: 5px;
+}
+
+header .links a:hover,
+header .links .selected {
+  color: #99CC33 !important;
+}
+
+header .links .selected {
+    font-weight: 700;
+}
+
+header img.app-logo {
+    width: 120px;
+    height: auto;
+    position: relative;
+}
+
+/* @media screen and (max-width: 1015px) {
+    header img.app-logo {
+        position: relative;
+        top: 4px;
+        margin: 0 10px 0;
+    }
+} */
+
+/* Header User Module */
+.user-module {
+    width: auto;
+    display: inherit;
+    padding-right: 1.5rem;
+}
+
+.user-module .user-name {
+    width: auto;
+}
+
+.user-module h6 {
+    display: inline-block;
+    font-size: 0.8rem;
+    font-weight: 700;
+    letter-spacing: 0.1rem;
+    margin-right: 15px;
+    font-family: 'Roboto', sans-serif;
+    width: 310px;
+    min-width: 240px;
+    margin: 26px 0;
+}
+
+.user-module h6 span {
+    font-weight: 400;
+}
+
+.user-module .user-module-icon {
+    width: 50px;
+    height: 50px;
+    color: #99CC33;
+    position: relative;
+    top: 8px;
+    margin-left: 10px;
+}
+
+.user-module h6,
+.user-module .user-module-icon:hover,
+.user-module-icon.selected {
+    color: #55565B;
+}
+
+.user-module-icon.selected {
+    background-color: rgba(0, 0, 0, 0.08);
+}
+
+
+.mobile-menu {
+    display: none;
+}
+/* Mobile */
+@media screen and (max-width: 1024px) {
+    header .links .navs {
+        display: none;
+    }
+    .mobile-menu {
+        display: flex;
+    }
+    
+    .mobile-menu button {
+        color: #99CC33;
+        width: 50px;
+        height: 50px;
+        top: 8px;
+        margin-left: 10px;
+    }
+    
+    .mobile-menu img.app-logo {
+        width: 120px;
+        height: auto;
+        position: relative;
+        top: 23px;
+    }
+    
+    .mobile-menu .selected {
+        background-color: rgba(0, 0, 0, 0.08);
+    }
+}
+
+/* Dashboard page */
+#dashboard {
+    margin-top: 128px; /* Double the Header height */
+}
