--- a/app/views/dashboard.ejs
+++ b/app/views/dashboard.ejs
@@ -1,3 +1,9 @@
-<h1 class="mt-4">Dashboard</h1>
-<p class="lead mb-3">Welcome <%= user.name %></p>
-<a href="/users/logout" class="btn btn-secondary">Logout</a>
+<div id="dashboard">
+    <h1 class="mt-4">Dashboard</h1>
+    <p class="lead mb-3">Welcome <%= user.name %></p>
+    <a href="/users/logout" class="btn btn-secondary">Logout</a>
+</div>
+<script>
+    // Show header when view is dashboard.
+    document.getElementsByTagName('header')[0].classList.add('show');
+</script>
