--- a/app/views/dashboard.ejs
+++ b/app/views/dashboard.ejs
@@ -1,7 +1,45 @@
-<div id="dashboard">
-    <h1 class="mt-4">Dashboard</h1>
-    <p class="lead mb-3">Welcome <%= user.name %></p>
-    <a href="/users/logout" class="btn btn-secondary">Logout</a>
+<div id="dashboard" class="sections">
+    <div class="user-module">
+        <p class="lead mb-3">Bienvenido, <%= user.name %></p>
+        <a href="/users/logout" class="btn btn-secondary">Salir</a>
+    </div>
+    <h1>Inventario</h1>
+    <table class="table table-hover">
+        <thead>
+            <tr>
+            <th scope="col">Nombre</th>
+            <th scope="col">SKU</th>
+            <th scope="col">Disponibilidad</th>
+            <th scope="col">Pedidos</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class="table-default">
+            <th scope="row">Gorras de golf</th>
+            <td>
+                <a href="/products/159/gorrasgolf/6/10">159</a>
+            </td>
+            <td>6</td>
+            <td>10</td>
+            </tr>
+            <tr class="table-default">
+            <th scope="row">Botines</th>
+            <td>
+                <a href="/products/237/botines/10/6">237</a>
+            </td>
+            <td>10</td>
+            <td>6</td>
+            </tr>
+            <tr class="table-default">
+            <th scope="row">Camperon de lluvia</th>
+            <td>
+                <a href="/products/237/camperondelluvia/12/3">237</a>
+            </td>
+            <td>12</td>
+            <td>3</td>
+            </tr>
+        </tbody>
+    </table> 
 </div>
 <script>
     // Show header when view is dashboard.
