Worked on excel converter and email sender

--- a/app/views/dashboard.ejs
+++ b/app/views/dashboard.ejs
@@ -1,8 +1,5 @@
 <div id="dashboard" class="sections">
-    <div class="user-module">
-        <p class="lead mb-3">Bienvenido, <%= user.name %></p>
-        <a href="/users/logout" class="btn btn-secondary">Salir</a>
-    </div>
+    <h6 class="lead mb-3">Bienvenido, <%= user.name %></h6>
     <h1>Inventario</h1>
     <table class="table table-hover">
         <thead>
