--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -139,6 +139,15 @@ header img.app-logo {
     display: inherit;
     padding-right: 1.5rem;
     margin-bottom: 40px;
+    padding-top: 20px;
+}
+
+.user-module a {
+    color: #55565B;
+}
+
+.user-module a:hover {
+    color: #99CC33;
 }
 
 .user-module .user-name {
@@ -221,12 +230,13 @@ table {
 #dashboard,
 #orders,
 #tracking-page,
-#product-page {
-    margin-top: 128px; /* Double the Header height */
+#product-page,
+#entries,
+#stats {
+    margin-top: 88px; /* Double the Header height */
 }
 
 #dashboard .lead {
-    float: left;
     margin-top: 3px;
 }
 
@@ -249,4 +259,57 @@ table {
 #dashboardtable a:hover,
 #orders a:hover {
     color: #99CC33;
+}
+
+#entries .table-wrapper {
+    overflow-x:auto
+}
+
+#entries table {
+    width:100%;
+    font-size: 12px;
+    padding-bottom: 20px;
+    margin-bottom: 40px;
+}
+
+#entries .html2excel button {
+    width: 100%;
+    margin: 10px 0 10px; 
+}
+
+#entries .html2excel .file-title {
+    height: 60px;
+}
+
+#entries .html2excel .file-title-text {
+    font-weight: bold;
+    color: #55565B;
+}
+
+@media screen and (min-width: 1360px) {
+    #entries .table-wrapper {
+        width: 124%;
+        margin-left: -12%;
+    }
+}
+
+#entries .html2excel button {
+    background-color: #99CC33;
+    border-color: #99CC33;
+}
+
+#entries .html2excel button:hover {
+    background-color: #55565B;
+    border-color: #55565B;
+}
+
+#entries button.btn-outline-danger {
+    background-color: #FFF;
+    color: #99CC33;
+}
+
+#entries button.btn-outline-danger:hover {
+    background-color: #99CC33;
+    border-color: #99CC33;
+    color: #FFF;
 }
