Added headers for excel file

--- a/app/views/entries.ejs
+++ b/app/views/entries.ejs
@@ -81,7 +81,7 @@
                 </tr>
             </table>
             <table id="products-for-excel" class="table table-hover">
-                <!-- <tr class="table-default">
+                <tr class="table-default" style="visibility:hidden;">
                 <th>NRO_ID</th>
                 <th>Nombre y Apellido</th> 
                 <th>CALLE</th>
@@ -95,7 +95,7 @@
                 <th>OBSERVACION</th>
                 <th>CANTIDAD</th>
                 <th>GESTION A REALIZAR</th>
-                </tr> -->
+                </tr>
                 <tr class="data">
                 <!-- Info append's here -->
                 </tr>
