--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -44,6 +44,9 @@
     <script src="/js/lodash.js"></script>
     <script src="/js/excel-converter.js"></script>
     <script src="/js/mobile-menu.js"></script>
+    <div class="loader-wrapper">
+        <div class="loader"></div>
+    </div>
     <div class="container">
         <%- body %>
     </div>
