Added new email address

--- a/app/views/dashboard.ejs
+++ b/app/views/dashboard.ejs
@@ -41,4 +41,6 @@
 <script>
     // Show header when view is dashboard.
     document.getElementsByTagName('header')[0].classList.add('show');
+    // Test SOAP request
+    
 </script>
