--- a/app/views/entries.ejs
+++ b/app/views/entries.ejs
@@ -23,7 +23,10 @@
         </div>
         <div class="row">
             <div class="col">
-                <input type="file" name="fileupload" />
+                <form ref='uploadForm' action="/entries/fileupload" id="uploadForm" method="post" encType="multipart/form-data">
+                    <input type="file" name="fileupload" />
+                    <input id="uploadfilesubmit" type="submit" />
+                </form>
         </div>
         <div class="row">
             <div class="col">
