--- a/app/views/partials/messages.ejs
+++ b/app/views/partials/messages.ejs
@@ -39,6 +39,6 @@
 <% if (success_email_msg != '') { %>
     <div class="alert alert-dismissible alert-success fade show"">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <strong>Bien hecho!</strong> <%= success_email_msg %><a href="#" class="alert-link">this important alert message</a>
+        <strong>Bien hecho!</strong> <%= success_email_msg %><a href="#" class="alert-link"></a>
     </div>
 <% } %>
