--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -364,16 +364,26 @@ table {
     margin-left: 0;
 }
 
-#uploadfile .back,
-#generatefile .back {
+.back,
+.back {
     color: #55565B;
     text-decoration: underline;
 }
 
-#uploadfile .back:hover,
-#generatefile .back:hover {
+.back:hover,
+.back:hover {
     color: #99CC33;
     text-decoration: none;
+}
+
+#uploadfile input[type="submit"] {
+    background-color: #55565B;
+    border-color: #55565B;
+}
+
+#uploadfile input[type="submit"]:hover {
+    background-color: #99CC33;
+    border-color: #99CC33;
 }
 
 
